--- a/tasks/04.bad-news/BadNews/Views/News/Index.cshtml
+++ b/tasks/04.bad-news/BadNews/Views/News/Index.cshtml
@@ -1,33 +1,5 @@
-﻿@using System.Globalization
-@{
-    var culture = CultureInfo.CreateSpecificCulture("ru-ru");
-}
-@using System.Web
+﻿@using System.Web
 @model BadNews.Models.News.IndexModel;
-
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-    <meta charset="utf-8"/>
-    <meta name="viewport"
-          content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
-    <title>Bad News</title>
-    <meta name="theme-color" content="#563d7c"/>
-    <link href="https://fonts.googleapis.com/css?family=Playfair+Display:700,900"
-          rel="stylesheet"/>
-    <link rel="stylesheet" href="/lib/bootstrap/dist/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="/css/site.css"/>
-</head>
-<body>
-<div class="container">
-    <header class="news-header">
-        <a class="news-header-logo text-dark" href="/">Bad News</a>
-    </header>
-
-    <div class="nav-scroller py-1 mb-2"></div>
-
-    <!-- Header /-->
-</div>
 
 <!-- Body -->
 
@@ -42,7 +14,7 @@
                 <div class="news-article">
                     <h4 class="news-article-title">@article.Header</h4>
                     <p class="news-article-meta">
-                        @article.Date.ToString("d MMM yyyy", culture)
+                        @article.Date.ToString("d MMM yyyy", ViewBag.Culture)
                     </p>
                     <p class="mb-auto">
                         @article.Teaser
@@ -84,9 +56,3 @@
 </footer>
 
 <!--/ Body -->
-
-<script src="/lib/jquery/dist/jquery.min.js"></script>
-<script src="/lib/bootstrap/dist/js/bootstrap.bundle.js"></script>
-<script src="/js/site.js"></script>
-</body>
-</html>
