--- a/tasks/04.bad-news/BadNews/Views/News/Index.cshtml
+++ b/tasks/04.bad-news/BadNews/Views/News/Index.cshtml
@@ -1,6 +1,28 @@
 ﻿@using System.Web
 @model BadNews.Models.News.IndexModel;
 
+@section Header {
+     <div class="row mb-2">
+         @foreach (var article in Model.FeaturedArticles)
+         {
+             var url = $"/news/fullarticle/{HttpUtility.UrlEncode(article.Id.ToString())}";
+
+             <div class="col-md-6">
+                 <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+                     <div class="col p-4 d-flex flex-column position-static">
+                         <h3 class="mb-0">@article.Header</h3>
+                         <div class="mb-1 text-muted">@article.Date.ToString("d MMM yyyy", ViewBag.Culture)</div>
+                         <p class="card-text mb-auto">
+                             @article.Teaser
+                         </p>
+                         <a href="@url">Читать полностью</a>
+                     </div>
+                 </div>
+             </div>
+         }
+     </div>
+}
+
 <!-- Body -->
 
 <main role="main" class="container">
