Генерировать адреса в ссылках с помощью TagHelper'ов вместо явного задания `href`

--- a/tasks/04.bad-news/BadNews/Views/News/FullArticle.cshtml
+++ b/tasks/04.bad-news/BadNews/Views/News/FullArticle.cshtml
@@ -1,9 +1,4 @@
-﻿@using System.Globalization
-@{
-    var culture = CultureInfo.CreateSpecificCulture("ru-ru");
-    Layout = "_Layout";
-}
-@model BadNews.Models.News.FullArticleModel;
+﻿@model BadNews.Models.News.FullArticleModel;
 
 <!-- Body -->
 
