--- a/tasks/04.bad-news/BadNews/Views/Shared/_Layout.cshtml
+++ b/tasks/04.bad-news/BadNews/Views/Shared/_Layout.cshtml
@@ -25,5 +25,6 @@
 <script src="/lib/jquery/dist/jquery.min.js"></script>
 <script src="/lib/bootstrap/dist/js/bootstrap.bundle.js"></script>
 <script src="/js/site.js"></script>
+<partial name="_ValidationScriptsPartial" />
 </body>
 </html>
