--- a/tasks/04.bad-news/BadNews/Views/News/FullArticle.cshtml
+++ b/tasks/04.bad-news/BadNews/Views/News/FullArticle.cshtml
@@ -15,6 +15,7 @@
         </div>
 
         <aside class="col-md-4 news-sidebar">
+            <vc:archive-links></vc:archive-links>
         </aside>
     </div>
 </main>
