--- a/tasks/04.bad-news/BadNews/Views/Shared/_Layout.cshtml
+++ b/tasks/04.bad-news/BadNews/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@using BadNews.Elevation
+<!DOCTYPE html>
 <html lang="ru">
 <head>
     <meta charset="utf-8" />
@@ -15,6 +16,11 @@
 <div class="container">
     <header class="news-header">
         <a class="news-header-logo text-dark" href="/">Bad News</a>
+        @if (ViewContext.IsElevated())
+        {
+            <span class="text-primary ml-2">есть привилегии</span>
+        }
+
     </header>
 
     <div class="nav-scroller py-1 mb-2"></div>
