--- a/tasks/04.bad-news/BadNews/Views/News/FullArticle.cshtml
+++ b/tasks/04.bad-news/BadNews/Views/News/FullArticle.cshtml
@@ -1,4 +1,5 @@
-﻿@model BadNews.Models.News.FullArticleModel;
+﻿@using BadNews.Elevation
+@model BadNews.Models.News.FullArticleModel;
 
 <!-- Body -->
 
@@ -10,6 +11,13 @@
                 <p class="news-article-meta">
                     @Model.Article.Date.ToString("d MMM yyyy", ViewBag.Culture)
                 </p>
+                @if (ViewContext.IsElevated())
+                {
+                    <form class="mb-4" onsubmit="return confirm('Удалить новость?')"
+                        asp-controller="Editor" asp-action="DeleteArticle" asp-route-id="@(Model.Article.Id)">
+                        <button type="submit" class="btn-danger">Удалить</button>
+                    </form>
+                }
                 @Html.Raw(Model.Article.ContentHtml)
             </div>
         </div>
