--- a/tasks/04.bad-news/BadNews/Views/Shared/_Layout.cshtml
+++ b/tasks/04.bad-news/BadNews/Views/Shared/_Layout.cshtml
@@ -9,8 +9,8 @@
     <meta name="theme-color" content="#563d7c" />
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:700,900"
           rel="stylesheet" />
-    <link rel="stylesheet" href="/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="/css/site.css" />
+    <link asp-append-version="true" rel="stylesheet" href="/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link asp-append-version="true" rel="stylesheet" href="/css/site.css" />
 </head>
 <body>
 <div class="container">
@@ -28,9 +28,9 @@
     @RenderSection("Header", false)
 </div>
 @RenderBody()
-<script src="/lib/jquery/dist/jquery.min.js"></script>
-<script src="/lib/bootstrap/dist/js/bootstrap.bundle.js"></script>
-<script src="/js/site.js"></script>
+<script asp-append-version="true" src="/lib/jquery/dist/jquery.min.js"></script>
+<script asp-append-version="true" src="/lib/bootstrap/dist/js/bootstrap.bundle.js"></script>
+<script asp-append-version="true" src="/js/site.js"></script>
 <partial name="_ValidationScriptsPartial" />
 </body>
 </html>
